<resources>
    <string name="app_name">Pothole Detection</string>
    <string name="IP">"192.168.0.118"</string>
    <string name="PORT">3000</string>
    <string name="google_map_api_key">AIzaSyADAtPLIQGT-jFe81VVgJIyb0UBi4nR7so</string>
    <string name="email">EMAIL</string>
    <string name="login">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="password">PASSWORD</string>
    <string name="name">NAME</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account? Sign Up</string>
    <string name="signup">SignUp</string>
    <string name="re_password">RE-PASSWORD</string>
    <string name="holetrack">HoleTrack</string>
    <string name="detect_share_nprotect_preserve">Detect. Share. \nProtect. Preserve.</string>
    <string name="connect_collaborate_conquer">Connect, Collaborate, Conquer.</string>
    <string name="get_started">Get Started</string>
    <string name="re_enter">Re-Enter</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="crack_on_the_road_surface">Crack on the road surface</string>
    <string name="icon_representing_hole_track">Icon representing hole track</string>
    <string name="login_description">Login</string>
    <string name="signin">signin</string>
    <string name="please_fill_in_your_confirm_password">Please fill in your confirm password</string>
    <string name="please_fill_in_your_password">Please fill in your password</string>
    <string name="please_fill_in_your_username">Please fill in your username</string>
    <string name="username_and_password_cannot_be_the_same">Username and password cannot be the same.</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>