<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/hole_track"
        android:textSize="21sp" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="40dp"
        android:text="@string/username"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/signupFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/username"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle9"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:inputType="text"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="132dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/image3" />

    </FrameLayout>


    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginStart="40dp"
        android:text="@string/email"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/signupFrameLayout3"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/email"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle9"
            android:layout_marginTop="105dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="240dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/email"/>

    </FrameLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginStart="40dp"
        android:text="@string/password"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/signupFrameLayout2"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/password2"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle9"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="365dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/image5"/>

    </FrameLayout>


    <TextView
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="480dp"
        android:layout_marginStart="40dp"
        android:text="@string/confirm_password"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/signupFrameLayout4"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/name"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle9"
            android:layout_gravity="center"
            android:layout_marginTop="220dp"
            android:gravity="center"
            android:hint="@string/re_enter"
            android:inputType="text"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="480dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/image5"
            />

    </FrameLayout>

    <ImageButton
        android:id="@+id/sign_in"
        android:layout_width="213dp"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp"
        android:background="@drawable/signupbutton"
        android:gravity="center"
        android:contentDescription="@string/sign_in"
        android:textSize="25sp" />

</RelativeLayout>