<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/hole_track1"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/hole_track"
        android:textSize="21sp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/login"
        android:gravity="center"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:text="Username"
        android:textSize="15sp"/>

    <FrameLayout
        android:id="@+id/usernameFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle9"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="138dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/image3"/>


    </FrameLayout>

    <TextView
        android:id="@id/password2"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="280dp"
        android:contentDescription="Enter your password"
        android:text="Password"
        android:textSize="15sp"/>



    <FrameLayout
        android:id="@+id/passwordFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameFrameLayout"
        android:layout_marginTop="60dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/password1"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle9"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:gravity="center"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="17dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/image5"/>

    </FrameLayout>

    <ImageButton
        android:id="@+id/login1"
        android:layout_width="213dp"
        android:layout_height="65dp"
        android:layout_below="@id/passwordFrameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/grp40"
        android:contentDescription="@string/login_description"
        android:gravity="center"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/donthaveaccount"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="60dp"
        android:text="Don't have an account?"
        android:background="@null"
        android:textColor="#355BE5"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/signUpButton"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="250dp"
        android:text="SignUp"
        android:background="@null"
        android:textColor="#355BE5"
        android:textSize="18sp"/>


</RelativeLayout>
